If ES3 EGL config selection fails, fall back to ES2.

BUG=643362

Review-Url: https://codereview.chromium.org/2313353002
Cr-Commit-Position: refs/heads/master@{#417267}

Former-commit-id: d5d623aed82374fffde513ed8de88346a14aea42